feat(api): update API to version 2.2.0
